# patient_record_system

./: Cargo.toml
src/: api.rs  error.rs  hasher.rs  jwt.rs  main.rs  models.rs  record_client.rs  response.rs
