[package]
name = "patient_record"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash"] }
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
mongodb = "2.8.2"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.202"
tokio = { version = "1.37.0", features = ["full"] }
