[package]
name = "med_trace"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash"] }
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
mongodb = "3.0.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.207"
tokio = { version = "1.39.2", features = ["full"] }
